// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav.vue props#is-animated 1`] = `
<div class="side-nav is-animated">
    <div class="menus"> <a class="close-btn">×</a></div>
</div>
`;

exports[`SideNav.vue props#text-center 1`] = `
<div class="side-nav has-text-centered">
    <div class="menus"> <a class="close-btn">×</a></div>
</div>
`;

exports[`SideNav.vue render default 1`] = `
<div class="side-nav">
    <div class="menus"> <a class="close-btn">×</a></div>
</div>
`;
